# MAI-OS

./: .gitignore  README.md
KP/: CMakeLists.txt  README.md  client.cpp  client.h  constants.h  messenger.cpp  messenger_server.cpp  server.cpp  server.h
KP/client/: client.cpp  client.h
KP/funcs/: CMakeLists.txt  gen_uuid.cpp  gen_uuid.h  string_parser.cpp  string_parser.h
KP/server/: server.cpp  server.h
KP/structs/: CMakeLists.txt  chat.cpp  chat.h  fifo_pipe.cpp  fifo_pipe.h  group_chat.cpp  group_chat.h  user.cpp  user.h  user_message.cpp  user_message.h
KP/test/: CMakeLists.txt
KP/tui/: CMakeLists.txt  chat_buffer.cpp  chat_buffer.h  text_buffer.cpp  text_buffer.h  tui.cpp  tui.h
lab1/: CMakeLists.txt  child.c  d_string.h  main.c  response.h
lab2/: CMakeLists.txt  d_string.c
lab3/: CMakeLists.txt  args_parsing.c  args_parsing.h  constants.h  generate_hex128.c  main.c  string_utils.c  string_utils.h
lab4/: CMakeLists.txt  child.c  d_string.c  main.c  print_error.c  print_error.h  sync_constants.h
lab5/: OS_Lab_5_v2_fixed.odt  lib.h  lib1.c  lib2.c  prog1.c  prog2.c
lab6/: .gitignore  CMakeLists.txt  README.md  balanced_tree.c  balanced_tree.h  compute_node.c  control_node.c  d_string.h  error_handler.c  error_handler.h  mq_node.c  mq_node.h
lab6/avl_tree/: avl_data.c  avl_data.h
lab6/errors/: CMakeLists.txt  error_handler.c  error_handler.h
lab6/structures/: CMakeLists.txt  balanced_tree.c  balanced_tree.h  mq_node.c  mq_node.h  rm_list.c  rm_list.h
